css z-index fix

--- a/gdprbar/views/css/bar.css
+++ b/gdprbar/views/css/bar.css
@@ -8,7 +8,7 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  z-index: 10;
+  z-index: 21;
 }
 
 .cookies-eu-banner button {
